--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tailwindcss/cli": "^4.1.1",
     "axios": "^1.7.9",
     "element-plus": "^2.9.4",
     "vue": "^3.5.13",
@@ -17,9 +18,15 @@
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.21",
     "normalize.css": "^8.0.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.1",
     "typescript": "~5.7.2",
     "vite": "^6.1.0",
     "vue-tsc": "^2.2.0"
+  },
+  "volta": {
+    "node": "18.12.1"
   }
 }
