--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/cli": "^4.1.1",
+    "@vueuse/motion": "^3.0.3",
     "axios": "^1.7.9",
     "element-plus": "^2.9.4",
     "vue": "^3.5.13",
