--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
     "@tailwindcss/cli": "^4.1.1",
     "@vueuse/motion": "^3.0.3",
     "axios": "^1.7.9",
     "element-plus": "^2.9.4",
+    "fast-xml-parser": "^5.2.0",
+    "jsonpath-plus": "^10.3.0",
     "vue": "^3.5.13",
     "vue-easy-lightbox": "^1.19.0",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "xmldom": "^0.6.0",
+    "xpath": "^0.0.34"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
