--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "xpath": "^0.0.34"
   },
   "devDependencies": {
+    "@types/xmldom": "^0.1.34",
     "@vitejs/plugin-vue": "^5.2.1",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
