--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-plus": "^2.9.4",
     "fast-xml-parser": "^5.2.0",
     "jsonpath-plus": "^10.3.0",
+    "pinia": "^3.0.2",
     "vue": "^3.5.13",
     "vue-easy-lightbox": "^1.19.0",
     "vue-router": "^4.5.0",
