--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "types": ["vite/client", "node"],
     "target": "es2020",
     "lib": ["es2020", "dom", "dom.iterable"],
     "module": "esnext",
