--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "xpath": "^0.0.34"
   },
   "devDependencies": {
+    "@stagewise-plugins/vue": "^0.6.2",
+    "@stagewise/toolbar-vue": "^0.6.2",
     "@types/node": "^20.19.9",
     "@types/xmldom": "^0.1.34",
     "@vitejs/plugin-vue": "^5.2.1",
