--- a/package.json
+++ b/package.json
@@ -9,10 +9,23 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^6.8.1",
+    "@codemirror/lang-css": "^6.3.1",
+    "@codemirror/lang-html": "^6.4.9",
+    "@codemirror/lang-javascript": "^6.2.4",
+    "@codemirror/lang-json": "^6.0.2",
+    "@codemirror/lang-python": "^6.2.1",
+    "@codemirror/lang-xml": "^6.1.0",
+    "@codemirror/language": "^6.11.3",
+    "@codemirror/state": "^6.5.2",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@codemirror/view": "^6.38.1",
     "@element-plus/icons-vue": "^2.3.1",
     "@tailwindcss/cli": "^4.1.1",
     "@vueuse/motion": "^3.0.3",
     "axios": "^1.7.9",
+    "codemirror": "^6.0.2",
     "element-plus": "^2.9.4",
     "fast-xml-parser": "^5.2.0",
     "jsonpath-plus": "^10.3.0",
